# LyraSense

./: .gitignore  LICENSE  LRS-00_sandbox.py  LRS-01_the first small scale test.py  LRS-05_new song registration.py  LRS-06_Reference Management.py  LRS-12_DTW matching.py  LRS-21_live test.py  LRS_M1_File.py  LRS_M2_Data.py  LRS_M3_DTW.py  LRS_M4_Stream.py  LRS_M5_Training.py  LRS_M6_Visualization.py  README.md  [G]_2026-0214_LyraSense_git.bat  [V]_Launch VSCode.bat  pyproject.toml  requirements.txt
19_bkup/: LRS_M2_Data_2026-0301-2132.py
LRS-01_Docs/: LyraSense_Implementation_Spec.md
LRS-03_launchers/: LRCLIB (download lyrics).url  [Batch]_LRS-05_new song registration.bat  [Batch]_LRS-06_Reference Management.bat  [Batch]_LRS-12_DTW matching.bat  [Batch]_LRS-21_live test.bat  [Batch]_LRS_VSCode.bat
data/example_songs/: demo.json
lyrasense/: __init__.py  cli.py  core.py
lyrasense/alignment/: __init__.py  dtw.py  tracker.py
lyrasense/audio/: __init__.py  capture.py  features.py
lyrasense/identification/: __init__.py  identifier.py
lyrasense/song_bank/: __init__.py  manager.py  song.py
tests/: conftest.py  test_alignment.py  test_cli.py  test_core.py  test_features.py  test_identification.py  test_song_bank.py
