[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyrasense"
version = "0.1.0"
description = "Real-Time Audio–Lyric Alignment for Live Music Performance"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
lyrasense = "lyrasense.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lyrasense*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
